; ModuleID = '/home/carl/AnghaBench/linux/drivers/ptp/extr_ptp_pch.c_pch_block_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ptp/extr_ptp_pch.c_pch_block_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pch_dev = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@PCH_TSC_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pch_dev*)* @pch_block_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pch_block_reset(%struct.pch_dev* %0) #0 {
  %2 = alloca %struct.pch_dev*, align 8
  %3 = alloca i32, align 4
  store %struct.pch_dev* %0, %struct.pch_dev** %2, align 8
  %4 = load %struct.pch_dev*, %struct.pch_dev** %2, align 8
  %5 = getelementptr inbounds %struct.pch_dev, %struct.pch_dev* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = call i32 @ioread32(i32* %7)
  %9 = load i32, i32* @PCH_TSC_RESET, align 4
  %10 = or i32 %8, %9
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load %struct.pch_dev*, %struct.pch_dev** %2, align 8
  %13 = getelementptr inbounds %struct.pch_dev, %struct.pch_dev* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @iowrite32(i32 %11, i32* %15)
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @PCH_TSC_RESET, align 4
  %19 = xor i32 %18, -1
  %20 = and i32 %17, %19
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* %3, align 4
  %22 = load %struct.pch_dev*, %struct.pch_dev** %2, align 8
  %23 = getelementptr inbounds %struct.pch_dev, %struct.pch_dev* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = call i32 @iowrite32(i32 %21, i32* %25)
  ret void
}

declare dso_local i32 @ioread32(i32*) #1

declare dso_local i32 @iowrite32(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
